--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
@@ -30,7 +30,9 @@
     <title>JP-Shop · by Juan Diaz</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" ></div>
+
     <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
