--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#ffffff" />
     <!-- end favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JP-Shop · by Juan Diaz</title>
+    <title>Shop · by Mohammed.Massoud</title>
   </head>
   <body>
     <div id="root" ></div>
